Complete swagger for gcd operation
